src/test/deca/context/valid/divide_int_divide_defvar_context.deca
// Description :
//
//      Test contextuellement correct de la division de la variable stockant la division avec définition et d'un int.
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    int y=3;
    y= y/ 2;
    print(y);
}