src/test/deca/context/invalid/divide_floatvar_float_divide_string_context.deca
// Description :
//
//      Test contextuellement incorrect de la division d'un float et d'un string dans une variable float
// 
// Résultats : 
// 
//      N/A
//
// Historique :
// 
//      Créé le 07/06/2023 par gl03

{
    float y=  3.5 /  "Bonjour";
}